crates/eure-macros/tests/compile_fail/proxy_union_newtype_mismatch_from.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/proxy_union_newtype_mismatch_from.rs:12:7
   |
12 |     A(u64),
   |     - ^^^ expected `u32`, found `u64`
   |     |
   |     arguments to this enum variant are incorrect
   |
note: tuple variant defined here
  --> tests/compile_fail/proxy_union_newtype_mismatch_from.rs:5:9
   |
 5 |         A(u32),
   |         ^
help: you can convert a `u64` to a `u32` and panic if the converted value doesn't fit
   |
12 |     A(u64.try_into().unwrap()),
   |          ++++++++++++++++++++
